[package]
name = "boolean-logic"
version = "0.1.2"
edition = "2021"
authors = ["Khaled Hosseini"]
homepage = "https://github.com/KhaledHosseini/propositional-logic"
repository = "https://github.com/KhaledHosseini/propositional-logic"
documentation = "https://docs.rs/crate/boolean-logic/"
description = "propositional logic evaluator that creates truth tables for propositional expressions"
license = "MIT"
keywords = ["boolean-logic","bool-logic", "propositional-logic", "boolean-expression", "truth-table"]
readme = "Readme.md"
exclude = [
    "test.pdf","test.html","test.csv","expressions.txt"
]

[[bin]]
name = "main"
edition = "2021"
path = "src/main.rs"

[lib]
name = "boolean_logic"

[features]
default = ["csv","pdf","html"]
pdf = ["genpdf"]
csv = []
html = []

[dependencies]
genpdf = {version = "0.2.0", optional = true }
indexmap = "2.6.0"
logos = "0.14.2"
prettytable-rs = "0.10.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3